--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 ---
-theme: jekyll-theme.minimal
+theme: jekyll-theme-minimal
 title: Salt Lake Adaptive Robotics Program
 description: information about robotics for people with intellectual disabilities
