--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 ---
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme 
 title: Salt Lake Adaptive Robotics Program
 description: information about robotics for people with intellectual disabilities
